Fix broken layout

--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,14 @@ a {
 body::before {
     content: "";
     position: fixed;
-    inset: 10vh 10vw;
-    background-color: hsl(184deg 32% 8% / 96%);
+    inset: 0 10%;
+    background-color: hsl(184deg 32% 8% / 94%);
     background-attachment: fixed;
 }
 
 #root {
     position: absolute;
-    inset: 11vh 11vw;
-    overflow: auto;
+    inset: 0 11%;
 }
 
 code {
